--- a/WeeklyMaker/App.config
+++ b/WeeklyMaker/App.config
@@ -1,6 +1,27 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
+	<configSections>
+		<section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog"/>
+	</configSections>
+
+	<nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd"
+      xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+		<targets>
+			<target name="file" xsi:type="File"
+            layout="${longdate} ${logger} ${message}${exception:format=ToString}"
+            fileName="logs/weeklymaker.log"
+            keepFileOpen="true"
+            encoding="utf-8" />
+			<target name="debugger" xsi:type="Debugger" layout="${logger} ${message}"/>
+		</targets>
+
+		<rules>
+			<logger name="*" minlevel="Debug" writeTo="file" />
+			<logger name="*" minlevel="Debug" writeTo="debugger" />
+		</rules>
+	</nlog>
+
+	<startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
 </configuration>
